header overflow issue in ie7

--- a/custom.css
+++ b/custom.css
@@ -94,7 +94,7 @@ a:visited,
 }
 
 #header #header-top {
-    height : 108px;
+    min-height : 108px;
     padding : 6px 0 12px;
 }
 
